Fix layout (remove scrollbars)

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,6 +1,6 @@
 .content {
-  padding: 15px;
-  height: calc(100vh - 90px);
+  padding: 0 15px;
+  height: calc(100vh - 56px);
   background-color: #dadada;
 }
 
