--- a/src/styles.scss
+++ b/src/styles.scss
@@ -28,6 +28,7 @@ html {
 
   body {
     margin: 0px;
+    overflow: hidden;
     // height: 100vh;
   }
 }
